remove list style in tech skills due to issue on mobile where the numbers go through the section

--- a/assests/styles/style.css
+++ b/assests/styles/style.css
@@ -32,6 +32,10 @@ ul li {
     font-size: 40px;
 }
 
+ol li {
+    list-style: none;
+}
+
 
 /* LOADING SCREEN */
 #loader-wrapper {
